<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.tlicorporation.triphil.activities.MainActivity">
<androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location"
                android:inputType="text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutParts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextParts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_actual"
                android:inputType="text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_status"
            android:textSize="16dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
