<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.tlicorporation.triphil.activities.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvBuildDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Build:" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColorHint="@android:color/black"
                android:textColorHighlight="@android:color/black"
                android:inputType="text"
                android:maxLines="1"
                android:textColor= "@android:color/black"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@android:color/white"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#4B61D9"
            android:text="@string/text_login"
            android:textColor="#DACFCF" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Register"
            android:background="#4B61D9"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/settings"
            android:background="#4B61D9"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
